# MixedPrecisionBlockQR

./: .gitignore  CMakeLists.txt  Gantt_Chart.docx  LICENSE  Project_Sketch.docx  README.md  guide.md
C/: main.cpp
C++/: main.cpp
Cuda/: .gitignore  main.cu  mmult.cu  mmult.cuh  qr.cu  qr.cuh  qr_config.h.in
Cuda/QR/: QR.sln
Cuda/QR/QR/: QR.vcxproj
Cuda/QR/Solver/: Solver.vcxproj  Solver.vcxproj.filters  solver.cu
Cuda/QR/Solver/x64/Release/: Solver.exe.recipe  mmult.cu.cache  mmult.cu1907987826.deps  qr.cu.cache  qr.cu1760761550.deps
Cuda/QR/Solver/x64/Release/Solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Solver.lastbuildstate
Cuda/performance/: flops.py  runtime.py  speedup.py  util.py
LaTeX/: .gitignore  ConvertToMarkdown.bat  QR_Decomposition.md  QR_Decomposition.tex  refs.bib
Weekly Meetings/: Week1.docx
data/: .gitignore
python/: .gitignore  accuracy_test.py  ca_qr.py  flops.py  householder_test.py  ill_condition_test.py  ill_condition_test_result.md  linear_least_sqare.py  performance_test.py  qr.py  test_all.py  test_data.py  ts_qr.py  utils.py  utils_test.py  wy.py
python/performance_test_result/: duration.md  error.md
tests/: CMakeLists.txt  test_mmult.cpp
